M5D6 desafio: Updated HTML file with new title and styles, and modified JavaScript file to change paragraph tag to span tag in list item.

--- a/desafioI.html
+++ b/desafioI.html
@@ -4,7 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Asincronia JS</title>
+
+  <style>
+    p, span {
+      margin: 0;
+    }
+
+    li{
+      margin: 0.8rem;
+    }
+  </style>
+
 </head>
 
 <body>
